--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,8 @@
 <body>
     <div class="main-content">
         {{>header }}
+
+        <p>This site was created by Fofana Daouda. It uses data from mapbox.com and weathersky.com!</p>
     <img src="/img/me.JPG" alt="MyPic" class="portrait">
     </div>
 
