--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -17,6 +17,7 @@
             <input type="text" placeholder="Location">
             <button>Search</button>
         </form>
+        <button id='send-location'>See my location</button>
 
         <p id='message-1'></p>
         <p id='message-2'></p>
